[gd_scene load_steps=4 format=2]

[ext_resource path="res://debug/icon.png" type="Texture" id=1]
[ext_resource path="res://ui/shop_card.gd" type="Script" id=2]
[ext_resource path="res://textures/ui/gold.png" type="Texture" id=3]

[node name="MarginContainer" type="PanelContainer"]
margin_right = 800.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 9
script = ExtResource( 2 )

[node name="MainContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 325.0
size_flags_horizontal = 3

[node name="NullLabel" type="Label" parent="MainContainer"]
visible = false
margin_top = 152.0
margin_right = 786.0
margin_bottom = 166.0
theme_type_variation = "BigLabel"
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "No Card Available"
align = 1
valign = 1
autowrap = true

[node name="Control" type="VBoxContainer" parent="MainContainer"]
margin_right = 786.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MainContainer/Control"]
margin_right = 786.0
margin_bottom = 246.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Description" type="Label" parent="MainContainer/Control"]
margin_top = 250.0
margin_right = 786.0
margin_bottom = 264.0
size_flags_horizontal = 3
text = "Stops monsters in their tracks, until they knock it down!"
align = 1
autowrap = true

[node name="Lore" type="Label" parent="MainContainer/Control"]
margin_top = 268.0
margin_right = 786.0
margin_bottom = 282.0
size_flags_horizontal = 3
text = "Who knew monsters were weak to cinderblock?"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/Control"]
margin_top = 286.0
margin_right = 786.0
margin_bottom = 318.0
alignment = 1

[node name="BuyButton" type="Button" parent="MainContainer/Control/HBoxContainer"]
unique_name_in_owner = true
margin_right = 786.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
text = "Purchase"
icon = ExtResource( 3 )
expand_icon = true

[node name="CostLabel" type="Label" parent="MainContainer/Control/HBoxContainer/BuyButton"]
unique_name_in_owner = true
anchor_left = 0.15
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "25"
valign = 1

[connection signal="pressed" from="MainContainer/Control/HBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
